--- a/www/themes/hyde/layouts/partials/head.html
+++ b/www/themes/hyde/layouts/partials/head.html
@@ -4,6 +4,9 @@
   <link href="https://gmpg.org/xfn/11" rel="profile">
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   {{ hugo.Generator }}
+  <meta property="og:title" content="Captain Contrary" />
+<meta property="og:url" content="https://captaincontrary.com" />
+<meta property="og:image" content="https://res.cloudinary.com/dafjqauwb/image/upload/v1718328892/captain-contrary/CaptainContraryBanner1280x720_wjvsuy.png" />
 
   <!-- Enable responsiveness on mobile devices-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
