--- a/www/themes/hyde/layouts/partials/head.html
+++ b/www/themes/hyde/layouts/partials/head.html
@@ -4,9 +4,25 @@
   <link href="https://gmpg.org/xfn/11" rel="profile">
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   {{ hugo.Generator }}
-  <meta property="og:title" content="Captain Contrary" />
-<meta property="og:url" content="https://captaincontrary.com" />
-<meta property="og:image" content="CaptainContraryBanner1280x720.png" />
+
+<!-- Facebook Meta Tags -->
+<meta property="og:url" content="https://captaincontrary.com/">
+<meta property="og:type" content="website">
+<meta property="og:title" content="Captain Contrary">
+<meta property="og:description" content="An Anarcho Chrisitan navigating the world. Home of the Captain Contrary Show.">
+<meta property="og:image" content="https://captaincontrary.com/CaptainContraryBanner1280x720.png">
+
+<!-- Twitter Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta property="twitter:domain" content="captaincontrary.com">
+<meta property="twitter:url" content="https://captaincontrary.com/">
+<meta name="twitter:title" content="Captain Contrary">
+<meta name="twitter:description" content="An Anarcho Chrisitan navigating the world. Home of the Captain Contrary Show.">
+<meta name="twitter:image" content="https://captaincontrary.com/CaptainContraryBanner1280x720.png">
+
+<!-- Meta Tags Generated via https://www.opengraph.xyz -->
+
+
 
   <!-- Enable responsiveness on mobile devices-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,7 +32,8 @@
   {{- else -}}
   <title>{{ .Title }} &middot; {{ .Site.Title }}</title>
   {{- end }}
-  <meta name="description" content="{{if .IsHome}}{{ $.Site.Params.description }}{{else}}{{.Description}}{{end}}" />
+  <meta name="description" content="An Anarcho Chrisitan navigating the world. Home of the Captain Contrary Show." />
+  <!-- <meta name="description" content="{{if .IsHome}}{{ $.Site.Params.description }}{{else}}{{.Description}}{{end}}" /> -->
 
   <!-- CSS -->
   <link type="text/css" rel="stylesheet" href="{{ .Site.BaseURL }}css/print.css" media="print">
